# graph

./: .clang-format  .gitignore  CMakeLists.txt
include/graph/algorithms/: acyclic_check.hpp
include/graph/primitives/: concepts.hpp  edge.hpp  graph.hpp  node.hpp  tags.hpp  types.hpp  vertex.hpp
samples/: CMakeLists.txt  dot_converter.cpp  helper.hpp
samples/stdafx/: CMakeLists.txt  stdafx.hpp
test/: CMakeLists.txt  graph_test.cpp
